Issue IMCMS-698 Fix/improve roles and permissions: - Add "Visibile" checkbox

--- a/src/main/webapp/imcms/css/page-info/imcms-access_page_info.css
+++ b/src/main/webapp/imcms/css/page-info/imcms-access_page_info.css
@@ -83,3 +83,6 @@
     display: none;
 }
 
+.imcms-enable-visible{
+    color: #27b864 !important;
+}
